demo/a2/node-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: otota1-node
          imagePullPolicy: Never
          ports:
            - name: web-interface
              containerPort: 3000
          resources:
            limits:
              cpu: 40m
              memory: 100Mi
