demo/a2/service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
    - name: exposed
      port: 3000
      protocol: TCP
      targetPort: web-interface
